--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,6 +84,7 @@
             android:layout_width="144dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
+            android:onClick="onClickChk_affichage"
             android:text="@string/showpassword" />
     </LinearLayout>
 
@@ -107,6 +108,7 @@
             android:layout_width="144dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
+            android:onClick="onClickChk_affichage"
             android:layout_weight="1"
             android:text="@string/showconfirmpassword" />
     </LinearLayout>
@@ -118,10 +120,11 @@
 
         <CheckBox
             android:id="@+id/chk_messageacceptation"
-            android:layout_width="244dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_weight="1"
+            android:onClick="onClickChk_affichagebouton"
             android:text="@string/messageacceptation" />
     </LinearLayout>
 
@@ -134,6 +137,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:enabled="false"
+            android:onClick="onClickbtn_sauvegarder"
             android:text="@string/sauvegarder" />
 
         <Button
@@ -141,6 +146,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
+            android:enabled="false"
+            android:onClick="onClickbtn_quitter"
             android:text="@string/quitter" />
     </RelativeLayout>
 
